1.上一版更新之Base64暫時停用。 嵌入Sun的code。